# mini_crm_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20b4b370bab5_initial_migration_with_users_clients_.py  make_address_nullable.py  make_phone_nullable.py
app/core/: config.py  email.py  security.py
app/db/: deps.py  session.py
app/models/: __init__.py  audit_log.py  client.py  lead.py  user.py
app/repositories/: __init__.py  base_repository.py
app/routers/: __init__.py  audit_logs.py  auth.py  clients.py  leads.py  users.py
app/schemas/: __init__.py  audit_log.py  client.py  lead.py  token.py  user.py
app/services/: __init__.py  audit_log_service.py  base_service.py  client_service.py  lead_service.py  user_service.py
app/utils/: base_model.py  dependencies.py  enums.py  exceptions.py  validators.py
dockerfiles/: Dockerfile.backend  Dockerfile.frontend
frontend/: .env.example  .env.production  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
frontend/src/views/: AuditLogView.vue  ClientDetailView.vue  ClientsView.vue  DashboardView.vue  LeadDetailView.vue  LeadsView.vue  LoginView.vue  UsersView.vue
scripts/: create_admin.py
tests/: conftest.py  test_client_service.py  test_lead_service.py  test_user_service.py
